# Agent-Eval

./: README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: hello_world.yaml
governance/: thresholds.yaml
src/agent_eval/: clear.py  cli.py  models.py  runner.py  scorers.py
